fixed mistake with z-index, also fixed header and hero wrapper

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -2,10 +2,6 @@ body {
   background-color: #121212;
 }
 
-.header {
-  margin-top: 20px;
-}
-
 .header-container {
   border: 1px solid rgba(255, 255, 255, 0.2);
   background-color: #121212;
@@ -82,6 +78,7 @@ body {
 /* backdrop */
 
 .header-backdrop {
+  z-index: 999;
   position: fixed;
   top: 0;
   left: 0;
@@ -109,7 +106,6 @@ body {
   height: 100vh;
   background-color: #bea69e;
   float: right;
-  z-index: 999;
 }
 
 .header-active-menu-cancel-btn {
