--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -40,6 +40,7 @@ body {
 }
 
 .header-and-hero-wrapper {
+  padding-top: 20px;
   background-image: url(/img/header/header-and-hero-bg-mobile-1x.png);
   background-size: contain;
 }
